# typhoon

./: .gitignore  .quickly  AUTHORS  CNAME  COPR_BUILD_GUIDE.md  Makefile  README.md  fedora-package.spec  index.html  io.github.archisman_panigrahi.typhoon.desktop  io.github.archisman_panigrahi.typhoon.json  io.github.archisman_panigrahi.typhoon.metainfo.xml  local.properties  manifest.json  meson.build  meson_options.txt  package.json  params.json  script.js  settings.gradle.kts  setup-copr-env.sh  setup.py  style.css  todo.md  typhoon.desktop  typhoon.desktop.in  update-version-number-all-files.sh  update.html  webapp.html  window_new.py  windows-wsl.html
.github/workflows/: aur.yml  deb.yml  debian-package.yml  fedora-package.yml  flatpak.yml  package.yml  snapcraft-arm64.yml  snapcraft.yaml  sync-to-gh-pages.yaml  windows-installer.yml
Assets/Stylesheets/: style.css
app/: build.gradle.kts
app/src/androidTest/java/io/github/archisman_panigrahi/typhoon/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: index.html  script.js  style.css  typhoon.html
app/src/main/assets/web-app/: script.js  style.css  typhoon.html
app/src/main/java/io/github/archisman_panigrahi/typhoon/: MainActivity.kt
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/io/github/archisman_panigrahi/typhoon/: ExampleUnitTest.kt
assets/css/: style.css
assets/screenshots/: resize.sh
aur/: PKGBUILD
data/glib-2.0/schemas/: gschemas.compiled  net.launchpad.typhoon.gschema.xml
data/media/: app.html  manifest.json  script.js  style.css  typhon_window.py  win.py
data/ui/: AboutTyphoonDialog.ui  PreferencesTyphoonDialog.ui  TyphoonWindow.ui  about_typhoon_dialog.xml  preferences_typhoon_dialog.xml  typhoon_window.xml
debian/: changelog  control  copyright  files  rules
debian/patches/: series  use-system-jquery.patch
fonts/: Anonymous.eot  ubuntu-condensed.eot
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
help/C/: index.page
po/: es.po  sr.po  typhoon.pot
qt6 example/: app.py  index.html
snap/: snapcraft.yaml
snap/gui/: io.github.archisman_panigrahi.typhoon.desktop
snap/local/: typhoon-launcher
tests/: test_example.py  test_lint.py
typhoon/: TyphoonWindow.py  __init__.py  app.html  qttest.py  script.js  style.css  style.css_bkup  test.py  typhoon.html  typhoon_window.py  typhoon_wrapper.in
typhoon_lib/: AboutDialog.py  Builder.py  PreferencesDialog.py  Window.py  __init__.py  helpers.py  typhoonconfig.py
web-app/: script.js  style.css  typhoon-web.html  typhoon.html
webapp/: script.js
windows_packaging/: generate_windows_icon.py  installer.nsi
